--- a/css/lacuna.css
+++ b/css/lacuna.css
@@ -1,7 +1,12 @@
 .lacuna {
-    display: inline-block;
-    font-size: 2em;
-    border: solid 2px;
-    padding: 2%;
-    margin: 1%;
+  display: inline-block;
+  font-size: 2em;
+  border: solid 2px darkslategray;
+  padding: 5px;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  width: 50px;
+  height: 50px;
 }
